--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
   /* background-color: rgba(68, 85, 102, 0.429); */
   align-items: center;
   justify-content: center;
-  margin-block: 3.5rem;
+  margin-block: 2.5rem;
 }
 
 #input-container{
@@ -178,54 +178,84 @@ font-style: normal;
 .nav{
   width: 53.7vw;
   /* height: 5rem; */
-  background-color: #1a1a1a;
+  background-color: #141414;
   margin-inline: auto;
+  display: flex;
+
   padding-block:1rem ;
   border-radius: 5px;
+
 }
 
+.settings{
+  margin-left: auto;
+  margin-right: 17px ;
+}
+.opt-container{
+  display: flex;
+  gap: 14px;
+  margin-inline: 10px;
+
+}
 .options{
   display: flex;
-  gap: 8px;
-  margin-inline: 10px;
+  flex-direction: column;
+
 }
 .options *{
   font-size: 1.1;
   cursor: pointer;
 }
-/* .options * .line{
-  width: 100%;
-  height: 2.5px;
-  background-color: #0085f7;
-  background-color: #484848;
-  transition: all 0.5s;
-  border-radius: 1.3px;
-  
-} */
-.options *:hover .line{
 
-  width: 100%;
+.line{
+
+  /* width: 2.2rem; */
+  width: 80px;
   height: 2.5px;
   background-color: #0084f7e8;
 
   backdrop-filter: blur(5px);
-  /* background-color: #484848; */
-  transition: all 0.5s;
+  transition: all 0.2s;
   border-radius: 1.3px;
+  position: absolute;
+  left: var(--left);
+  margin-top: 24px;
+  margin-left: 10.5px;
 
+  transition: all 0.5s ease;
 
 }
 
 .News{
   width: 53.7vw;
   margin-inline: auto;
-  background-color: #1a1a1ad0;
+  background-color: #242424;
+  box-shadow: 0px 4px 5px 1.5px #1414144e;
   height: 18.6rem;
   display: flex;
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px;
 
-  overflow: hidden;
+  /* overflow: clip; */
 }
+@media screen and (max-width: 1279px) {
+  .News,.nav{
+    width: 80vw;
+  }
+  #input-container{
+    width: 76vw;
+  }
+  #search-button{
+    margin-left: auto;
+    margin-right:0.8rem ;
+  }
+}
+@media screen and (max-width: 780px) {
+  .News,.nav{
+    width: 86vw;
+  }
 
+}
 .news-cont{
   width: 100%;
   height: 100%;
@@ -251,11 +281,72 @@ font-style: normal;
   flex-direction: column;
   gap: 0.8rem;
   padding-inline: 2rem;
-  justify-content: center;
+  /* justify-content: center; */
+  padding-block: 1.76rem;
 
   
 }
 .news-cont .content h3{
-  font-size: 1.7rem;
+  font-size: 1.65rem;
+  
+}
+.btn-cont{
+  display: flex;
+  gap: 1.1rem;
+}
+.btn-cont a{
+  text-decoration: none;
+
+  width: fit-content;
+
+
+
+}
+.news-btn{
+  background-color: #0084f7e8;
+  font-size: 1.15rem;
+  font-weight: 500;
+  padding-inline: 15px;
+  padding-block: 5.5px;
+  outline: none;
+  border: none;
+  border-radius: 6px;
+  transition: all 0.5s ease;
+  
+  
+}
+.news-btn:hover{
+  padding-inline: 17px;
+  border-radius: 18px;
+  cursor: pointer;
+  box-shadow: 1px 1px 4px rgba(61, 60, 60, 0.753);
+
+
+  
+}
+
+.writen-date,.source{
+  font-size: 0.9rem;
+  background-color: #484848;
+  padding-block: 3.6px;
+  padding-inline: 8.6px;
+  border-radius: 18px;
+  color: #d5d4d4;
+}
+.loading{
+  width: 30%;
+  height: 3px;
+  background-color: #0084f7e8;
+  border-radius: 2px;
+  animation:Load 0.3s linear;
+}
+
+@keyframes Load {
+  from{
+    width: 25%;
+  }
+  to{
+    width: 100%;
+  }
   
 }
